fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,7 @@ p,h1,h2,h3,h4,h5,h6
     opacity: 0;
     text-decoration: none;
     color: #F8F9FA;
+    margin-right: -5%;
   }
 
   #hobbies{
